# thread-protocol

./: Cargo.toml  build.rs  run.sh
proto/: packet.proto
src/: communication.rs  main.rs  packet.rs
src/communication/: serial.rs  strategy.rs  zeromq.rs
