[package]
name = "thread-protocol"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "serial_pub"
path = "src/bin/serial_pub.rs"
[[bin]]
name = "xpub_proxy"
path = "src/bin/xpub_proxy.rs"

[[bin]]
name = "zmq_pub"
path = "src/bin/zmq_pub.rs"

[dependencies]
zmq = { version = "0.10" }
serialport = { version = "4.7.1", features = ["default"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.5"
crossbeam-channel = "0.5"
anyhow = "1.0"
prost = "0.13"
# Only necessary if using Protobuf well-known types:
prost-types = "0.13"
# Only necessary if using Protobuf well-known types:
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
[build-dependencies]
prost-build = "0.13.5"
